map slightly working

--- a/resources/map.html
+++ b/resources/map.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Nearby markets (open Monday)</title>
+    <title>Pacifica Police Incidents</title>
     <script SRC="http://code.jquery.com/jquery-1.7.1.js"></script>
     <script SRC="map.js"></script>
     <script SRC="http://maps.google.com/maps/api/js?sensor=false" TYPE="text/javascript">
