Oh jquery, you so cray cray. Also, emacs indent-region went a little bananas, sorry Mike. But it works for larger values of works now.

--- a/resources/public/map.html
+++ b/resources/public/map.html
@@ -9,7 +9,7 @@
     <script SRC="jq-map/jquery.ui.map.js">
   </script>
   </head>
-  <body ONLOAD="map_init(37.6687476,-122.4836863)">
+  <body>
     <div ID="map_canvas" CLASS="map rounded" STYLE="width:100%; height:480px">
     </div>
   </body>
