--- a/resources/public/map.html
+++ b/resources/public/map.html
@@ -7,7 +7,8 @@
     <script SRC="http://maps.google.com/maps/api/js?sensor=false" TYPE="text/javascript">
     </script>
     <script SRC="jq-map/jquery.ui.map.js">
-  </script>
+	</script>
+	<LINK rel="stylesheet" href="css/map.css" type="text/css" />>
   </head>
   <body>
     <div ID="map_canvas" CLASS="map rounded" STYLE="width:100%; height:480px">
