--- a/resources/public/map.html
+++ b/resources/public/map.html
@@ -4,11 +4,9 @@
     <title>Pacifica Police Incidents</title>
     <script SRC="http://code.jquery.com/jquery-1.7.1.js"></script>
     <script SRC="map.js"></script>
-    <script SRC="http://maps.google.com/maps/api/js?sensor=false" TYPE="text/javascript">
-    </script>
-    <script SRC="jq-map/jquery.ui.map.js">
-	</script>
-	<LINK rel="stylesheet" href="css/map.css" type="text/css" />>
+    <script SRC="http://maps.google.com/maps/api/js?sensor=false" TYPE="text/javascript"> </script>
+    <script SRC="jq-map/jquery.ui.map.js"></script>
+	<LINK rel="stylesheet" href="css/map.css" type="text/css" />
   </head>
   <body>
     <div ID="map_canvas" CLASS="map rounded" STYLE="width:100%; height:480px">
