--- a/resources/public/map.html
+++ b/resources/public/map.html
@@ -9,7 +9,7 @@
 	<LINK rel="stylesheet" href="css/map.css" type="text/css" />
   </head>
   <body>
-    <div ID="map_canvas" CLASS="map rounded" STYLE="width:100%; height:480px">
+    <div ID="map_canvas" CLASS="map rounded">
     </div>
   </body>
 </html>
