--- a/resources/public/map.html
+++ b/resources/public/map.html
@@ -2,14 +2,36 @@
 <html>
   <head>
     <title>Pacifica Police Incidents</title>
-    <script SRC="http://code.jquery.com/jquery-1.7.1.js"></script>
-    <script SRC="map.js"></script>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
+    <script SRC="http://code.jquery.com/jquery-1.9.1.js"></script>
     <script SRC="http://maps.google.com/maps/api/js?sensor=false" TYPE="text/javascript"> </script>
+    <script SRC="map.js"></script>
+    <script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
     <script SRC="jq-map/jquery.ui.map.js"></script>
 	<LINK rel="stylesheet" href="css/map.css" type="text/css" />
+  <script>
+  $(function() {
+    $( "#start_datepicker" ).datepicker();
+    $( "#end_datepicker" ).datepicker();
+  });
+  </script>
   </head>
   <body>
-    <div ID="map_canvas" CLASS="map rounded">
+    <table>
+      <tr>
+	<td style="vertical-align: top">
+	  <h3>Pacifica Police Incidents</h3>
+	  <div id="form"> <!-- formerly a form -->
+	    From: <input type="text" id="start_datepicker"></br>
+	    To:<input type="text" id="end_datepicker"></br>
+	    <input type="button" id="update" value="Update">
+	  </div>
+	</td>
+	<td>
+	  <div ID="map_canvas" CLASS="map rounded" >
+	</td>
+      </tr>
+    </table>
     </div>
   </body>
 </html>
