start to get text search working

--- a/resources/public/map.html
+++ b/resources/public/map.html
@@ -18,6 +18,7 @@
 	  <div id="form"> <!-- formerly a form -->
 	    From: <input type="text" id="start_datepicker"></br>
 	    To:<input type="text" id="end_datepicker"></br>
+	    Text Search:<input type="text" id="text_search"></br>
 	    <input type="button" id="update" value="Update">
 	  </div>
 	</td>
