--- a/resources/public/map.html
+++ b/resources/public/map.html
@@ -13,20 +13,26 @@
   <body>
     <table>
       <tr>
-	<td style="vertical-align: top">
+	<td style="vertical-align: top; max-width: 270px;">
 	  <h3>Pacifica Police Incidents</h3>
 	  <div id="form"> <!-- formerly a form -->
-	    From: <input type="text" id="start_datepicker"></br>
-	    To:<input type="text" id="end_datepicker"></br>
-	    Text Search:<input type="text" id="text_search"></br>
-	    <input type="button" id="update" value="Update">
+	    <table>
+	      <tr><td align=right>From </td><td> <input type="text" id="start_datepicker"></td></tr>
+	      <tr><td align=right>To</td><td><input type="text" id="end_datepicker"></td></tr>
+	      <tr><td align=right>Text&nbsp;search</td><td><input type="text" id="text_search"></td></tr>
+	      <tr><td/><td align=right><input type="button" id="update" value="Update"></td></tr>
+	    </table>
+
 	  </div>
+	  <p/>
+    Produced by Concerned Hackers of Pacifica. Data from <a href="http://www.pacificaindex.com/policelogs.html">Pacifica Index</a>.
 	</td>
 	<td>
 	  <div ID="map_canvas" CLASS="map rounded" >
 	</td>
       </tr>
     </table>
+
     </div>
   </body>
 </html>
