add contact, and fix bug I introduced to API

--- a/resources/public/map.html
+++ b/resources/public/map.html
@@ -25,7 +25,7 @@
 
 	  </div>
 	  <p/>
-    Produced by Concerned Hackers of Pacifica. Data from <a href="http://www.pacificaindex.com/policelogs.html">Pacifica Index</a>.
+    Produced by Concerned Hackers of Pacifica [<a href="mailto:pacificaincidents@gmail.com">mail</a>]. Data from <a href="http://www.pacificaindex.com/policelogs.html">Pacifica Index</a>.
 	</td>
 	<td>
 	  <div ID="map_canvas" CLASS="map rounded" >
