Show loading/unloading data.

--- a/resources/public/map.html
+++ b/resources/public/map.html
@@ -28,6 +28,7 @@
     Produced by Concerned Hackers of Pacifica [<a href="mailto:pacificaincidents@gmail.com">mail</a>]. Data from <a href="http://www.pacificaindex.com/policelogs.html">Pacifica Index</a>.
 	</td>
 	<td>
+	  <div id="loading_data">Loading data, please wait...</div>
 	  <div ID="map_canvas" CLASS="map rounded" >
 	</td>
       </tr>
