Update link to source data.

--- a/resources/public/map.html
+++ b/resources/public/map.html
@@ -25,7 +25,7 @@
 
 	  </div>
 	  <p/>
-    Produced by Concerned Hackers of Pacifica [<a href="mailto:pacificaincidents@gmail.com">mail</a>]. Data from <a href="http://www.pacificaindex.com/policelogs.html">Pacifica Index</a>.
+    Produced by Concerned Hackers of Pacifica [<a href="mailto:pacificaincidents@gmail.com">mail</a>]. Data from <a href="http://www.cityofpacifica.org/depts/police/media/media_bulletin.asp">City of Pacifica</a>.
 	</td>
 	<td>
 	  <div id="loading_data">Loading data, please wait...</div>
