--- a/resources/public/map.html
+++ b/resources/public/map.html
@@ -3,8 +3,8 @@
   <head>
     <title>Pacifica Police Incidents</title>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
-    <script SRC="http://code.jquery.com/jquery-1.9.1.js"></script>
-    <script SRC="http://maps.google.com/maps/api/js?sensor=false" TYPE="text/javascript"> </script>
+    <script SRC="https://code.jquery.com/jquery-1.9.1.js"></script>
+    <script SRC="https://maps.google.com/maps/api/js?sensor=false" TYPE="text/javascript"> </script>
     <script SRC="map.js"></script>
     <script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
     <script SRC="jq-map/jquery.ui.map.js"></script>
@@ -25,7 +25,7 @@
 
 	  </div>
 	  <p/>
-    Produced by Concerned Hackers of Pacifica [<a href="mailto:pacificaincidents@gmail.com">mail</a>]. Data from <a href="http://www.pacificaindex.com/policelogs.html">Pacifica Index</a>.
+    Produced by Concerned Hackers of Pacifica [<a href="mailto:pacificaincidents@gmail.com">mail</a>]. Data from <a href="https://www.pacificaindex.com/policelogs.html">Pacifica Index</a>.
 	</td>
 	<td>
 	  <div id="loading_data">Loading data, please wait...</div>
