--- a/resources/public/map.html
+++ b/resources/public/map.html
@@ -4,7 +4,9 @@
     <title>Pacifica Police Incidents</title>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
     <script SRC="https://code.jquery.com/jquery-1.9.1.js"></script>
-    <script SRC="https://maps.google.com/maps/api/js?sensor=false" TYPE="text/javascript"> </script>
+    <script async
+	    src="https://maps.googleapis.com/maps/api/js?key={gmap-api-key}&callback=initMap">
+    </script>
     <script SRC="map.js"></script>
     <script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
     <script SRC="jq-map/jquery.ui.map.js"></script>
