why won't this work

--- a/resources/public/map.html
+++ b/resources/public/map.html
@@ -3,14 +3,11 @@
   <head>
     <title>Pacifica Police Incidents</title>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
-    <script SRC="https://code.jquery.com/jquery-1.9.1.js"></script>
-    <script async
-	    src="https://maps.googleapis.com/maps/api/js?key={gmap-api-key}&callback=initMap">
-    </script>
-    <script SRC="map.js"></script>
+    <script src="https://code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="map.js"></script>
     <script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
-    <script SRC="jq-map/jquery.ui.map.js"></script>
-	<LINK rel="stylesheet" href="css/map.css" type="text/css" />
+    <script src="jq-map/jquery.ui.map.js"></script>
+    <link rel="stylesheet" href="css/map.css" type="text/css" />
   </head>
   <body>
     <table>
@@ -37,6 +34,7 @@
     </table>
 
     </div>
+    <script async src="https://maps.googleapis.com/maps/api/js?key={gmap-api-key}&callback=initMap">    </script>
   </body>
 </html>
 
