--- a/resources/public/map.html
+++ b/resources/public/map.html
@@ -24,7 +24,7 @@
 
 	  </div>
 	  <p/>
-    Produced by Concerned Hackers of Pacifica [<a href="mailto:pacificaincidents@gmail.com">mail</a>]. Data from <a href="http://www.cityofpacifica.org/depts/police/media/media_bulletin.asp">City of Pacifica</a>.
+    Produced by Concerned Hackers of Pacifica [<a href="mailto:pacificaincidents@gmail.com">mail</a>]. Data from <a href="http://www.cityofpacifica.org/depts/police/media/media_bulletin.asp">City of Pacifica</a>. Code is on <a href="https://github.com/mtravers/pacifica-incidents">Github</a>.
 	</td>
 	<td>
 	  <div id="loading_data">Loading data, please wait...</div>
